# mkdocs-pyscript-test

./: .gitignore  README.md  airport.toml  index.html  mkdocs.yml  pyproject.toml
docs/: index.md
